--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "next": "15.0.3",
+    "pg": "^8.14.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-datepicker": "^8.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
